fix: changing the way of listing all events